scripts/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-yourmoments-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  tls:
  - hosts:
    - api.yourdomain.com
    secretName: be-yourmoments-tls
  rules:
  - host: api.yourdomain.com
    http:
      paths:
      - path: /photo
        pathType: Prefix
        backend:
          service:
            name: photo-svc
            port:
              number: 8001
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 8003
      - path: /transaction
        pathType: Prefix
        backend:
          service:
            name: transaction-svc
            port:
              number: 8005
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: upload-svc
            port:
              number: 8002
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-svc
            port:
              number: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: be-yourmoments-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: traefik
